--- a/sass/layout.scss
+++ b/sass/layout.scss
@@ -10,7 +10,7 @@
 }
 
 
-/*-------------color style-------------*/
+/*----color style---*/
 
 $color-blue:#33b7d8;
 $color-green:#98cb60;
@@ -18,17 +18,15 @@ $color-red:#ed4d4d;
 $color-titlegray:#558490;
 $color-textgray:#798792;
 
-/*---------------------------------------------------------------------------------*/
+/*----------------------------------------------*/
 
 .wrap {
     width: 100%;
     max-width: 1156px;
     min-width: 760px;
-    background-color: #e9edf5;
+    background-color: #eaedef;
     padding: 10px 20px;
     .Add {
-        // width: 188px;
-        // height: 35px;
         padding: 10px 20px;
         border: none;
         border-radius: 3px;
@@ -79,10 +77,10 @@ $color-textgray:#798792;
             background-color: #e9edf5;
             border: 0px solid transparent;
             margin-top: 0px;
-            &:nth-child(even)>.panel-heading {
+            &:nth-child(odd)>.panel-heading {
                 background-color: #f9fafc;
             }
-            &:nth-child(even)>.panel-collapse {
+            &:nth-child(odd)>.panel-collapse {
                 background-color: #f9fafc;
             }
             .panel-heading {
@@ -335,7 +333,7 @@ $color-textgray:#798792;
                             }
                         }
                         ul.title {
-                            background-color: #33b7d8;
+                            background-color: #97c5dd;
                             line-height: 1.2;
                             padding-right: 18px;
                             overflow: hidden;
@@ -346,9 +344,9 @@ $color-textgray:#798792;
                                 font-family: Lato;
                                 color: #fff;
                                 float: left;
-                                border-left: 1px solid #c1f1f7;
+                                border-left: 1px solid #fff;
                                 &:first-child {
-                                    border-left: 0px solid #c1f1f7;
+                                    border-left: 0px solid #fff;
                                 }
                             }
                             li.threecolumn {
@@ -456,7 +454,7 @@ $color-textgray:#798792;
     }
 }
 
-//=======================================================
+//========================================
 @-webkit-keyframes RedShadow {
     100% {
         background-color: #f5e0e0;
@@ -482,7 +480,7 @@ $color-textgray:#798792;
     }
 }
 
-//=========================================================================
+//============================================
 @media screen and(max-width:1100px) {
     .MGService_wrap {
         .panel-group {
